<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_track_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="45"
        android:text="@string/tv_number"/>

    <TextView
        android:id="@+id/tv_track_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="12"
        android:text="@string/tv_song_title"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_track_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="43"
        android:gravity="right"
        android:text="@string/tv_song_length"/>

</LinearLayout>