<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp">

    <ImageView
        android:id="@+id/img_album_cover"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_vertical"
        tools:src="@tools:sample/avatars"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        tools:ignore="ObsoleteLayoutParam,RtlHardcoded"
        android:layout_toEndOf="@+id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/album_name"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tv_artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="normal"
            android:text="@string/artist_name"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/genre_name"/>

            <ImageView
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_dot"/>

            <TextView
                android:id="@+id/tv_album_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="@string/year"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>