<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/img_detail_cover_bg"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="-20dp"
                android:nestedScrollingEnabled="false"
                android:scaleType="centerCrop"
                android:tintMode="add"
                app:tint="#60FFFFFF"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="-20dp"
                android:src="@drawable/cover_gradien"/>

            <ImageView
                android:id="@+id/img_detail_cover"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                tools:src="@tools:sample/avatars"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_detail_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_detail_artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/artist_name"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv_detail_album_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_name"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dot"/>

            <TextView
                android:id="@+id/tv_detail_album_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="16sp"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="30dp"
            card_view:cardCornerRadius="4dp"
            app:cardBackgroundColor="@color/secondaryColor">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/songs"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_detail_album_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release"
                        android:gravity="center"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_detail_album_song"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/songs"
                        android:gravity="center"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_detail_album_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label"
                        android:gravity="center"
                        android:textSize="14sp"/>
                </TableRow>

            </TableLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tv_detail_album_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="6"
                android:ellipsize="end"
                android:text="@string/detail"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracklist"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            card_view:cardCornerRadius="4dp"
            android:padding="10dp">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lv_track_list"
                android:scrollbars="vertical"
                tools:ignore="NestedScrolling" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_detail_album_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:text="@string/tv_song_length"/>

    </LinearLayout>


</ScrollView>